name:                ghc-typelits-symbols
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/ghc-typelits-symbols#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag examples
  description:  Build examples
  default:      False

library
  hs-source-dirs:      src
  exposed-modules:     GHC.TypeLits.Symbols.Solver
                     , GHC.TypeLits.Symbols
                     , GHC.TypeLits.Symbols.Internal
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , ghc-tcplugins-extra
                     , singletons
                     , mtl
  default-language:    Haskell2010
  extensions:          DataKinds, GADTs, TypeFamilies, TypeOperators, TypeInType
  ghc-options:         -Wall

-- test-suite ghc-typelits-symbols-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , ghc-typelits-symbols
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   default-language:    Haskell2010

executable example
  if flag(examples)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      examples
  Main-is:             example.hs
  build-depends:       base
                     , ghc-typelits-symbols
                     , singletons
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/konn/ghc-typelits-symbols

